Fix the stroke color swatch clipping on the bottom edge.

--- a/src/style/panel.less
+++ b/src/style/panel.less
@@ -54,7 +54,7 @@
 }
 
 .panel-appearance-section .section-container .stroke {
-    margin-top: .5rem;
+    margin-top: .4rem;
 }
 
 .panel-layers-section, .panel-libraries-section {
